<resources>
    <string name="app_name">Sophia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
        <string name="app_monetary_simbol">R$</string>
        <string name="app_back">back</string>
        <string name="app_ok">OK</string>
        <string name="app_tentar_novamente">Tentar novamente</string>
        <string name="app_fechar">FECHAR</string>
        <string name="app_editar">EDITAR</string>
        <string name="app_edicao">Edição</string>
        <string name="app_remover">REMOVER</string>
        <string name="app_compartilhar">COMPARTILHAR</string>
        <string name="app_sim">SIM</string>
        <string name="app_nao">NÃO</string>
        <string name="app_continuar">Continuar</string>
        <string name="app_confirmar">Confirmar</string>
        <string name="app_cancelar">Cancelar</string>
        <string name="app_proxima">Próxima aplicação</string>
        <string name="app_voltar_inicio">VOLTAR AO INÍCIO</string>
        <string name="app_ocultar_produtos">Ocultar produtos contratados</string>
        <string name="app_ver_produtos">Ver produtos contratados</string>
        <string name="app_dias">%d Dias</string>
        <string name="app_selecionar_conta">Selecione uma conta</string>
        <string name="app_prazo_dialog">Prazo de vencimento (em dias)</string>
        <string name="app_tit_sair_aplicacao">Tem certeza que deseja abandonar essas operações?</string>
        <string name="app_msg_sair_aplicacao">As informações inseridas serão descartadas.</string>
        <string name="app_atencao">Atenção</string>
        <string name="app_msg_sem_saldo">"O valor da aplicação excede o saldo disponível na conta %1$s"</string>
        <string name="app_msg_sucesso">As alterações foram realizadas com sucesso</string>
        <string name="app_operacoes_indisponiveis">OPERAÇÕES INDISPONÍVEIS</string>
        <string name="app_investimentos_titulo">Investimentos</string>
        <string name="app_aplicar">Aplicar</string>
        <string name="app_hoje">Hoje</string>
        <string name="app_resgatar">Resgatar</string>
        <string name="app_carregando">Carregando</string>
        <string name="app_erro">Problemas em acessar as informações</string>
        <string name="app_erro_mensagem">Estamos enfrentando problemas em acessar suas informações, pode ser algum problema de conectividade. Deseja tentar novamente? </string>
        <string name="app_ligue_agora">Ligue agora</string>
        <string name="app_horario">seg a sex das 08:00 as 20:00hrs</string>
        <string name="app_chat">Chat</string>
        <string name="app_central_de_atendimento">Central de Atendimento</string>
        <string name="app_dialog_texto_central_atendimento">Para aportes ou novas contratações fale com nossa assessoria especializada.</string>
        <string name="app_zero_double">0.00</string>
        <string name="app_dialog_telefone_atendimento">4004–3535</string>
        <string name="app_finalizar_resgate">FINALIZAR RESGATE</string>
        <string name="app_alterar_aplicacao">Alterar aplicação</string>
        <string name="app_aguarde">Aguarde</string>
        <string name="app_de_ate">De %1$s até %2$s</string>
        <string name="aviso_saida_para_outro_app_santander">Você irá acessar um outro aplicativo do Santander. Deseja continuar?</string>
        <string name="aviso_saida_para_acesso_url_externa">Você irá acessar uma página da web. Deseja continuar?</string>
        <string name="app_corretora_url_hk">https://homol2.santandercorretora.com.br/S2/Shell/ServicePages/EnterPage.aspx?token=%s</string>
        <string name="app_corretora_url">https://www2.santandercorretora.com.br/S2/Shell/ServicePages/EnterPage.aspx?token=%S</string>
        <string name="app_monetary_value">R$ %1$s</string>
        <string name="app_aplicar_valor">Investir por valor</string>
        <string name="app_dialogo_rentabilidade">Quanto mais tempo o seu dinheiro permanecer aplicado, maior será a sua rentabilidade.</string>
        <string name="app_dialogo_msg_29_30_31">"Não é possível programar a data para de transferência de valores para a poupança para os dias 29, 30 ou 31."</string>
        <string name="app_investimento_sem_saldo_disponivel">Investimento sem saldo disponível para resgate.</string>
        <string name="ph_zero_decimal">0,00</string>
        <string name="ph_text_pq">Lorem Ipsum</string>
        <string name="ph_monetario">R$9.999,99</string>
        <string name="ph_data">99/99/9999</string>
        <string name="ph_zero_dia">0 dias</string>
        <string name="error_msg_teste">Olar! Teste de mensagem de erro de sistema! </string>
        <string name="error_generic">Não foi possível obter os dados de suas aplicações. Tente novamente mais tarde.</string>
        <string name="inv_home_lbl_consolidado">CONSOLIDADO</string>
        <string name="inv_home_lbl_historico"><u>VER HISTÓRICO</u></string>
        <string name="inv_home_lbl_valor_investido">Valor total</string>
        <string name="inv_home_lbl_valor_disponivel">Valor disponível para resgate</string>
        <string name="inv_home_btn_aplicar">Aplicar</string>
        <string name="inv_home_btn_resgatar">Resgatar</string>
        <string name="tit_produtos_contratados">Produtos contratados</string>
        <string name="inv_empty_sem_investimento">Você não possui nenhum investimento contratado</string>
        <string name="inv_empty_perfil">Gostaria de ver nossa recomendação para o seu perfil?</string>
        <string name="inv_empty_button_comecar">Começar</string>
        <string name="det_subp_lbl_produto">Produto Selecionado</string>
        <string name="det_subp_lbl_valor_total">Valor total</string>
        <string name="det_subp_lbl_valor_investido">Valor investido</string>
        <string name="det_subp_lbl_valor_disponivel">Valor disponível para resgate</string>
        <string name="det_subp_lbl_ultima_atualizacao">Valores referentes a</string>
        <string name="det_subp_lbl_qntd_contratos">Você possui %d</string>
        <string name="det_subp_lbl_detalhe_operacao_singular">contrato neste investimento:</string>
        <string name="det_subp_lbl_detalhe_operacao_plural">contratos neste investimento:</string>
        <string name="card_det_sub_ver_detalhe">Ver detalhes</string>
        <string name="card_det_sub_ocultar_detalhe">Ocultar detalhes</string>
        <string name="det_subp_coe_content">Taxa de Remuneração de 11,5% ao período, caso Dólar dos EUA seja maior ou igual ao Valor de Referência. Caso contrário, e desde que não haja Resgate Antecipado, receberá apenas o Valor nominal aplicado.</string>
        <string name="det_subp_text_go_corretora">Para consultar o valor disponível para resgate e realizar transações, acesse o aplicativo</string>
        <string name="det_subp_label_app_corretora">Santander Corretora.</string>
        <string name="det_subp_label_operacao_corretora_plural">ativos neste investimento:</string>
        <string name="det_subp_label_operacao_corretora_singular">ativo neste investimento:</string>
        <string name="det_subp_lbl_valor_nominal">Valor nominal aplicado</string>
        <string name="det_subp_label_operacao_corretora_popup_title">Aviso</string>
        <string name="det_subp_label_operacao_corretora_popup_content">Para acessar este conteúdo, você será direcionado a outro aplicativo do Santander.</string>
        <string name="det_subp_msg_padrao_tooltip">Operação indisponível.</string>
        <string name="apli_previdecia_btn_continuar">CONTINUAR</string>
        <string name="apli_quer_aplicar">Onde quer aplicar?</string>
        <string name="apli_voce_pode_aplicar">Você pode aplicar em uma ou mais certificados ao mesmo tempo.</string>
        <string name="apli_new_title">Aplicação</string>
        <string name="apli_novo_new_operation">Nova Operação</string>
        <string name="apli_novo_carencia">Carência</string>
        <string name="apli_novo_nao_ha">Não há</string>
        <string name="apli_novo_ver_regras">Ver regras para remuneração</string>
        <string name="apli_novo_lbl_valor_investido">Valor investido</string>
        <string name="apli_novo_prazo_de_vencimento">Prazo de vencimento</string>
        <string name="apli_titulo_prazo_dialog">Prazo de vencimento (em dias)</string>
        <string name="apli_novo_aplicacoes_mensais">APLICAÇÕES MENSAIS</string>
        <string name="apli_novo_cdb_di_funcionario">CDB DI Funcionário</string>
        <string name="apli_novo_conta_de_origem">Conta de origem</string>
        <string name="apli_novo_agencia_conta_corrente">Agência e conta corrente</string>
        <string name="apli_novo_alterar">ALTERAR</string>
        <string name="apli_novo_saldo_disponivel">Saldo disponível:</string>
        <string name="apli_novo_saldo_disponivel_total">Saldo disponível total:</string>
        <string name="apli_novo_valor_da_aplicacao">Valor da aplicação</string>
        <string name="apli_novo_valor_minimo">Valor mínimo: R$ 1.000,00</string>
        <string name="apli_novo_data_da_aplicacao">Data da aplicação</string>
        <string name="apli_novo_horario_limite_para_aplicacao">Horário limite para aplicação: 20:00</string>
        <string name="apli_novo_msg_prox_dia_util">A aplicação será efetuada no dia selecionado ou no próximo dia útil.</string>
        <string name="apli_novo_parzo_max_msg">Prazo máximo: %s dias</string>
        <string name="cart_novo_contrato">Nova Operação</string>
        <string name="cart_label">Estamos quase lá! Revise as informações abaixo antes de finalizar</string>
        <string name="car_termos_e_condicoes">Termos e condições</string>
        <string name="cart_disclaimer">Caso a data da aplicação caia em um feriado ou fim de semana, a aplicação ocorrerá no próximo dia útil.\n\nPara futuramente acessar ou editar esta ou outras programações efetuadas, acesse o Internet Banking.\n\n A rentabilidade passada não representa garantia de rentabilidade futura.</string>
        <string name="car_chk_termos_e_condicoes">Li e concordo com o Termos e Condições Gerais das aplicações acima.</string>
        <string name="label_central_atendimento">Central de Atendimento Santander</string>
        <string name="telefone_central_atendimento">4004–3535 (Capitais e Regiões Metropolitanas)\n0800–702–3535 (Demais Localidades)</string>
        <string name="label_sac">SAC</string>
        <string name="telefone_sac">0800–762–777</string>
        <string name="label_ouvidoria">Ouvidoria</string>
        <string name="telefone_ouvidoria">0800–762–0322</string>
        <string name="config_inv_txt_como_fazer_aplicacao">Como gostaria de fazer sua aplicação?</string>
        <string name="config_inv_txt_seleciona_como_fazer_aplicacao">Selecione uma das opções e comece a investir!</string>
        <string name="config_inv_txt_api_txt">Para acessar esta opção, responda o questionário de Análise de Perfil do Investidor (API) no Internet Banking.</string>
        <string name="recomendacao_investimento_hint">0.000,00</string>
        <string name="recomendacao_investimento_titulo">Nossa recomendação</string>
        <string name="recomendacao_investimento_info">Confira o plano que montamos com base em seu perfil de investidor :</string>
        <string name="recomendacao_investimento_valor_a_aplicar">Valor total a aplicar</string>
        <string name="recomendacao_investimento_utilizar_em_1_ano">Para você utilizar em menos de 1 ano:</string>
        <string name="recomendacao_investimento_utilizar_em_mais_anos">Para utilizar após 1 ano:</string>
        <string name="recomendacao_investimento_central_atendimento">Para informações sobre produtos como Previdência e Corretora, acesse nossa Central de Atendimento.</string>
</resources>