<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_recomendacao"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.santander.investimentoV2.features.recomendacao.view.RecomendacaoActivity"
    tools:showIn="@layout/activity_recomendacao">
    <include layout="@layout/layout_header_pequeno" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:text="@string/recomendacao_investimento_titulo"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/inv_black_two"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recomendacao_text_view_titulo" />

            <TextView
                android:text="@string/recomendacao_investimento_info"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/inv_black_two"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recomendacao_text_view_info" />

            <TextView
                android:text="@string/recomendacao_investimento_valor_a_aplicar"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/inv_black_two"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recomendacao_text_view_titulo_valor_total" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/app_monetary_simbol"
                    android:gravity="top|end"
                    android:textAlignment="gravity"
                    android:textColor="@color/inv_black_two"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/recomendacao_investimento_hint"
                    android:textColor="@color/inv_black_two"
                    android:textSize="32sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recomendacao_text_view_valor_total"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:text="@string/recomendacao_investimento_utilizar_em_1_ano"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/inv_warm_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recomendacao_text_view_1_ano" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recomendacao_recycler_view_curto_prazo"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/recomendacao_investimento_utilizar_em_mais_anos"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/inv_warm_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recomendacao_text_view_mais_anos" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recomendacao_recycler_view_longo_prazo"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/recomendacao_investimento_central_atendimento"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recomendacao_text_view_central_informacoes" />

            <Button
                android:background="@drawable/app_button_red_white_pill"
                android:textColor="@color/inv_white"
                android:layout_marginTop="30dp"
                android:text="@string/app_continuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recomendacao_button_continuar" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
