<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/inv_black"
        android:text="@string/app_central_de_atendimento"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/inv_warm_grey"
        android:lineSpacingExtra="4sp"
        android:text="@string/app_dialog_texto_central_atendimento"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contato_telefonico"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/central_dialog_ligue_agora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="#dd000000"
                android:text="@string/app_ligue_agora"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#89000000"
                android:lineSpacingExtra="10sp"
                android:text="@string/app_horario"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_central_atendimento"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/central_dialog_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="#dd000000"
                android:text="@string/app_chat"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#89000000"
                android:lineSpacingExtra="10sp"
                android:text="@string/app_horario"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        >

        <Button
            android:id="@+id/central_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/inv_transparent"
            android:text="@string/app_cancelar"
            android:textColor="@color/inv_tealish"
            />
    </LinearLayout>
</LinearLayout>