<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/inv_white_three"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_flower"
            android:layout_margin="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/inv_warm_grey"
            android:lineSpacingExtra="5sp"
            android:gravity="center_horizontal"
            android:text="@string/inv_empty_sem_investimento"
            android:layout_marginBottom="9dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/inv_warm_grey_two"
            android:lineSpacingExtra="4sp"
            android:gravity="center_horizontal"
            android:text="@string/inv_empty_perfil"
            android:layout_marginBottom="35dp"
            />
        <Button
            android:id="@+id/btn_begin"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/inv_empty_button_comecar"
            android:textAllCaps="true"
            android:textColor="@color/inv_white_two"
            android:background="@drawable/shape_lead_round_button"
            android:layout_margin="10dp"
            android:elevation="0dp"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>
</RelativeLayout>
