<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_configurar_investimentos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.santander.investimentoV2.features.configurarInvestimentos.view.ConfigurarInvestimentosActivity"
    tools:showIn="@layout/activity_configurar_investimentos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:text="@string/config_inv_txt_como_fazer_aplicacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textAlignment="center"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:id="@+id/configurar_investimento_titulo"
        android:textColor="@color/inv_black_two"
        android:textSize="18sp" />

    <TextView
        android:text="@string/config_inv_txt_seleciona_como_fazer_aplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/inv_black_two"
        android:gravity="center"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/configurar_investimento_sub_titulo" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/configurar_investimento_recycler_view"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/config_inv_txt_api_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/inv_warm_grey"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="12sp"
        android:id="@+id/configurar_investimento_disclamer" />
    </LinearLayout>

</RelativeLayout>
